--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-      <div id="clock">
+      <p id="clock">
 
-      </div>
+      </p>
 
       <script src="./index.js"></script>
 </body>
