--- a/main.html
+++ b/main.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-      <div id="clock">
+	<p id="timer"></p>
+    <script type="text/javascript" src="./script.js">
+</script>
 
-      </div>
-
-      <script src="./index.js"></script>
 </body>
+
 </html>
